# BiomedParse

./: .gitignore  README.md  entry.py  environment.yml  example_prediction.py  inference.py  inference_example_3D.ipynb  inference_examples_RGB.ipynb  install.sh  my_environment.yml  pyproject.toml
BiomedParse/datasets/: build.py
BiomedParse/datasets/dataset_mappers/: biomed_dataset_mapper.py
BiomedParse/datasets/evaluation/: classification_evaluation.py  segmentation_evaluation.py
BiomedParse/datasets/visual_sampler/: sampler.py  simpleclick_sampler.py
BiomedParse/inference_utils/: inference.py
BiomedParse/modeling/: BaseModel.py
BiomedParse/modeling/architectures/: seem_model_demo.py  seem_model_v0.py  seem_model_v1.py
BiomedParse/modeling/language/: misc.py  vlpencoder.py
BiomedParse/modeling/language/LangEncoder/: transformer.py
BiomedParse/modeling/utils/: misc.py
BiomedParse/pipeline/: XDecoderPipeline.py
BiomedParse/trainer/: utils_trainer.py  xdecoder_trainer.py
BiomedParse/utilities/: model.py
assets/requirements/: requirements.txt
configs/: biomedparse_3D.yaml  finetune_biomedparse.yaml
configs/backbone/: d2focal.yaml
configs/datamodule/datasets/biomedparse/: biomedparse_dataset.yaml  biomedparse_finetune_dataset.yaml
configs/olympus_checkpoint/: biomedparse_checkpoint_loader.yaml
configs/sem_seg_head/: maskformer_head.yaml
configs/sem_seg_head/pixel_decoder/: transformer_encoder_fpn.yaml
configs/sem_seg_head/predictor/: boltzformer_decoder.yaml
configs/sem_seg_head/predictor/language_encoder/: seem_language_encoder.yaml
